# bsl-droid

./: README.md
electronics/: README.md
software/: README.md  default_count_on_zero.json  motor_calibration.json  pyproject.toml  requirements.txt
software/doc/: design.md
software/ref_ai/: can_doc.md  endpoints_0.5.14.json  gim6010-8.md  gim6010-8_rev2.2.md
software/src/: main_pos.py
software/src/drive_gim6010/: README.md
software/src/drive_gim6010/src/: control_pos.py  control_pos_sync.py  drive_mit.py  drive_mit_2.py  get_encoder_count.py  gim6010_controller.py  go_config.py  go_config_sync.py  main_set_zero.py  move_to_shadow.py  move_to_zero.py  move_to_zero_mit.py  save_encoder_count_on_zero.py  scan_and_calibrate.py  stand.py  test_motor_can.py
software/src/generate_gait/: README.md
software/src/generate_gait/src/: gait.py  gait_simple.py  send_all_zero.py  swing_horizontal.py  swing_vertical.py  visualizer.py  walk.py
software/src/tools_gim6010_usb/: README.md  README_set_index_offset.md
software/src/tools_gim6010_usb/src/: change_can_id.py  execute_setup_and_calibrate.py  get_odrive_settings.py  rotate_to_zero.py  set_index_offset.py  test_pos_odrive.py  verify_setup_and_calibrate.py
